# cOPYRIGHT 2011 fREE sOFTWARE foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
install(FILES
    doa_capon_ccf.yml
    doa_timestamp_ccf.yml
    doa_unwrap_ff.yml
    doa_linearslope_ff.yml
    doa_mode_ii.yml
    doa_lin_delay_cc.yml
    doa_peak_estimator_cif.yml
    doa_cub_delay_cc.yml
    doa_cumulative_ff.yml
    doa_variance_ff.yml
    doa_zero_pad_cc.yml
    doa_sample_offset_cci.yml
    doa_hold_ii.yml
    doa_hold_ff.yml
    doa_full_capon_ccf.yml
    doa_full_capon3_ccf.yml
    doa_multiply_exp_cc.yml
    doa_pi2pi_ff.yml
    doa_arrow_f.yml
    doa_delay.yml
    doa_message_sink_i.yml
    doa_message_sink_f.yml
    doa_add_const_ff.yml
    doa_phase2doa_ff.yml
    doa_hold_state_ff.yml DESTINATION share/gnuradio/grc/blocks
)
